<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progress_circular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:id="@+id/scroll_view_search"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_ui">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/input_txt"
                app:layout_constraintTop_toTopOf="@id/search_ui"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" >

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textStyle="bold|italic"
                    android:drawableStart="@drawable/baseline_location_city_24" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/search_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/search_btn"
                android:gravity="center"
                android:layout_margin="20dp"
                app:icon="@drawable/baseline_search_24"
                app:layout_constraintTop_toBottomOf="@id/input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:id="@+id/scroll_view_display"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/display_ui"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="visible">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/location"
                android:textSize="30sp"
                android:hint="@string/text_location"
                android:gravity="center"
                android:layout_margin="15dp"
                android:drawableStart="@drawable/baseline_location_on_24"
                android:drawablePadding="10dp"
                app:layout_constraintTop_toTopOf="@id/display_ui"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/weather_icon"
                android:layout_margin="15dp"
                app:layout_constraintTop_toBottomOf="@id/location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/temperature"
                android:textSize="45sp"
                android:hint="@string/text_temperature"
                android:layout_margin="15dp"
                android:drawableStart="@drawable/baseline_device_thermostat_24"
                android:drawablePadding="10dp"
                app:layout_constraintTop_toBottomOf="@id/weather_icon"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/current_date"
                android:textSize="23sp"
                android:hint="@string/text_current_date_time"
                android:layout_margin="15dp"
                android:drawableStart="@drawable/baseline_access_time_filled_24"
                android:drawablePadding="10dp"
                app:layout_constraintTop_toBottomOf="@id/temperature"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:id="@+id/min_temperature"
                android:textSize="23sp"
                android:hint="@string/text_min_temperature"
                android:layout_margin="15dp"
                android:drawableStart="@drawable/baseline_device_thermostat_24"
                android:drawablePadding="10dp"
                app:layout_constraintTop_toBottomOf="@id/current_date"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:id="@+id/max_temperature"
                android:textSize="23sp"
                android:hint="@string/text_max_temperature"
                android:layout_margin="15dp"
                android:drawableStart="@drawable/baseline_device_thermostat_24"
                android:drawablePadding="10dp"
                app:layout_constraintTop_toBottomOf="@id/current_date"
                app:layout_constraintStart_toEndOf="@id/min_temperature" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:id="@+id/pressure"
                android:textSize="23sp"
                android:hint="@string/text_air_pressure"
                android:layout_margin="15dp"
                android:drawableStart="@drawable/baseline_air_24"
                android:drawablePadding="10dp"
                app:layout_constraintTop_toBottomOf="@id/min_temperature"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:id="@+id/humidity"
                android:textSize="23sp"
                android:hint="@string/text_humidity"
                android:layout_margin="15dp"
                android:drawableStart="@drawable/baseline_water_drop_24"
                android:drawablePadding="10dp"
                app:layout_constraintTop_toBottomOf="@id/max_temperature"
                app:layout_constraintStart_toEndOf="@id/pressure" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:id="@+id/wind_speed"
                android:textSize="23sp"
                android:hint="@string/text_wind_speed"
                android:layout_margin="15dp"
                android:drawableStart="@drawable/baseline_air_24"
                android:drawablePadding="10dp"
                app:layout_constraintTop_toBottomOf="@id/pressure"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:id="@+id/wind_direction"
                android:textSize="23sp"
                android:hint="@string/text_wind_direction"
                android:layout_margin="15dp"
                android:drawableStart="@drawable/baseline_air_24"
                android:drawablePadding="10dp"
                app:layout_constraintTop_toBottomOf="@id/humidity"
                app:layout_constraintStart_toEndOf="@id/wind_speed" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:id="@+id/sunrise_time"
                android:textSize="23sp"
                android:hint="@string/text_sunrise_time"
                android:layout_margin="15dp"
                android:drawableStart="@drawable/baseline_wb_sunny_24"
                android:drawablePadding="10dp"
                app:layout_constraintTop_toBottomOf="@id/wind_speed"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:id="@+id/sunset_time"
                android:textSize="23sp"
                android:hint="@string/text_sunset_time"
                android:layout_margin="15dp"
                android:drawableStart="@drawable/baseline_wb_sunny_24"
                android:drawablePadding="10dp"
                app:layout_constraintTop_toBottomOf="@id/wind_direction"
                app:layout_constraintStart_toEndOf="@id/sunrise_time" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="184dp"
                android:layout_height="75dp"
                android:id="@+id/search_location_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="Search By Last Location"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="15dp"
                app:icon="@drawable/baseline_search_24"
                app:layout_constraintTop_toBottomOf="@id/sunrise_time"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="184dp"
                android:layout_height="75dp"
                android:id="@+id/search_city_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="Search By Current Location"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="15dp"
                app:icon="@drawable/baseline_search_24"
                app:layout_constraintTop_toBottomOf="@id/sunset_time"
                app:layout_constraintStart_toEndOf="@id/search_location_btn" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="184dp"
                android:layout_height="75dp"
                android:id="@+id/search_query_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="Search By Location"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="15dp"
                app:icon="@drawable/baseline_search_24"
                app:layout_constraintTop_toBottomOf="@id/search_location_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>